<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="TxHmiComau" Id="{348d06b7-40a4-460a-b0ee-28efb7b8afb0}">
    <Declaration><![CDATA[TYPE TxHmiComau :
STRUCT
	status : DINT;
	q1 : REAL;
	q2 : REAL;
	q3 : REAL;
	q4 : REAL;
	q5 : REAL;
	q6 : REAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>